added my talking points

--- a/EmbeddingClusteringVectorizationWorkshop.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop.ipynb
@@ -212,7 +212,8 @@
    "metadata": {},
    "source": [
     "**Talking Point:**      \n",
-    "Jatinder: Using Word2Vec and forming a vector matrix to represents the words, After training, each word in our vocabulary is mapped to a 100-dimensional dense vector that captures some semantic information"
+    "- Jatinder: Using Word2Vec and forming a vector matrix to represents the words, After training, each word in our vocabulary is mapped to a 100-dimensional dense vector that captures some semantic information\n",
+    "- Oluwafemi: Consider visualizing these learned vectors (PCA/t-SNE) and computing cosine similarities to demonstrate semantic clusters and validate the embeddings."
    ]
   },
   {
@@ -265,7 +266,8 @@
    "metadata": {},
    "source": [
     "**Talking Point**       \n",
-    "Jatinder: showing single word \"natural\" in vector of 100-deminsion size"
+    "- Jatinder: showing single word \"natural\" in vector of 100-deminsion size\n",
+    "- Oluwafemi: Also show how to compare this vector with others (cosine similarity) and report the vector norm to inspect magnitude and relative positioning."
    ]
   },
   {
@@ -340,7 +342,8 @@
    "metadata": {},
    "source": [
     "**Talking Point**       \n",
-    "Jatinder: Continues Bags Of Words (CBOW) Model : With Cosine_similarity we can find the word most similar to `\"natural\"` word"
+    "- Jatinder: Continues Bags Of Words (CBOW) Model : With Cosine_similarity we can find the word most similar to `\"natural\"` word\n",
+    "- Oluwafemi: Demonstrate analogy operations (e.g., `king - man + woman = queen`) and discuss how top-N and similarity thresholds influence the interpretation of results."
    ]
   },
   {
@@ -503,7 +506,8 @@
    "metadata": {},
    "source": [
     "**Talking Points**      \n",
-    "Jatinder: Setting `sg=1` in the Word2Vec constructor, which switches from CBOW to Skip-gram."
+    "- Jatinder: Setting `sg=1` in the Word2Vec constructor, which switches from CBOW to Skip-gram.\n",
+    "-Oluwafemi: Compare the CBOW vs Skip-gram similarity outputs and training time on the same corpus to highlight trade-offs in quality and speed."
    ]
   },
   {
@@ -632,7 +636,8 @@
    "metadata": {},
    "source": [
     "**Talking Points**      \n",
-    "Jatinder: Saving the SKIPGRAM in memory, and reload the model using Word2Vec.load(path) "
+    "- Jatinder: Saving the SKIPGRAM in memory, and reload the model using Word2Vec.load(path) \n",
+    "- Oluwafemi: When saving models, include metadata (vocab size, vector_size, training params) and use versioned filenames to ensure reproducibility."
    ]
   },
   {
@@ -693,7 +698,8 @@
    "metadata": {},
    "source": [
     "**Talking Point**       \n",
-    "Jatinder : If a word never appears during training, Word2Vec has no idea where to place it in vector space—it becomes meaningless noise.\n"
+    "- Jatinder : If a word never appears during training, Word2Vec has no idea where to place it in vector space—it becomes meaningless noise.\n",
+    "- Oluwafemi: To handle OOV terms, consider subword models (FastText), character n-grams, or mapping to an `<UNK>` token and discuss their impact on downstream tasks.\n"
    ]
   },
   {
