Added the comparison

--- a/EmbeddingClusteringVectorizationWorkshop.ipynb
+++ b/EmbeddingClusteringVectorizationWorkshop.ipynb
@@ -1704,6 +1704,24 @@
     "# print(f\"\\nShape of Conceptual GloVe Document Vectors: {glove_document_vectors_conceptual.shape}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word2Vec vs. GloVe: A Simple Comparison\n",
+    "\n",
+    "Imagine you have a big pile of words and sentences (your text). Both Word2Vec and GloVe are ways to teach a computer what words mean by looking at how they are used together.\n",
+    "\n",
+    "| Feature              | Word2Vec                                         | GloVe                                                |\n",
+    "| :------------------- | :----------------------------------------------- | :--------------------------------------------------- |\n",
+    "| **How it works**     | It's like a smart guesser. It tries to guess words that often appear near a given word. It learns by looking at small groups of words in sentences. | It's like a number counter. It counts how many times words appear near each other across the *whole* pile of text. It learns by looking at these total counts. |\n",
+    "| **What it uses**     | Small groups of words in sentences (local context). | Total counts of word pairs across all sentences (global context). |\n",
+    "| **Good at**          | Understanding how words are used in specific situations and their grammar. | Understanding the overall meaning and connections between words across the entire text. |\n",
+    "| **Example (Our Text)**| Word2Vec learns \"artificial\" and \"intelligence\" are linked because they often appear right next to each other in sentences about AI. | GloVe learns \"artificial\" and \"intelligence\" are linked because, in the whole collection of text, they tend to show up in similar \"neighborhoods\" of other words very often. |\n",
+    "| **Main Goal**        | To predict words based on their neighbors.       | To create word numbers (vectors) that match the word counts seen in the whole text. |\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
